[gd_scene load_steps=8 format=3 uid="uid://bf7yxq3c26c68"]

[ext_resource type="Script" path="res://pantallas/combate/combate.gd" id="1_jhdxn"]
[ext_resource type="Texture2D" uid="uid://beauuy7a5awjs" path="res://pantallas/mazmorras/Battleground4/Bright/Battleground2.png" id="2_pbmf8"]
[ext_resource type="Texture2D" uid="uid://dsvvimit20ioe" path="res://pantallas/mazmorras/Battleground1/Bright/Battleground1.png" id="2_xj8s4"]
[ext_resource type="Texture2D" uid="uid://b0ltqnsmtn0tx" path="res://pantallas/mazmorras/Battleground2/Bright/Battleground4.png" id="3_kbj5s"]
[ext_resource type="PackedScene" uid="uid://1u8fu60wg640" path="res://personajes/main/characters/main_character.tscn" id="3_vnwr0"]
[ext_resource type="Texture2D" uid="uid://cl1f6feyj4sve" path="res://pantallas/mazmorras/Battleground3/background3.png" id="4_axbcr"]
[ext_resource type="PackedScene" uid="uid://hrcfccchdnfw" path="res://personajes/Enemigos/King/enemy_king.tscn" id="4_ut3le"]

[node name="Combate" type="Node2D"]
script = ExtResource("1_jhdxn")

[node name="bg1" type="TextureRect" parent="."]
visible = false
modulate = Color(0.847059, 0.847059, 0.847059, 1)
show_behind_parent = true
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_xj8s4")

[node name="bg2" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_kbj5s")

[node name="bg3" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("4_axbcr")

[node name="bg4" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_pbmf8")

[node name="MainCharacter" parent="." instance=ExtResource("3_vnwr0")]
position = Vector2(565, 673)
slide_on_ceiling = false

[node name="enemy4" parent="." instance=ExtResource("4_ut3le")]
texture_filter = 1
position = Vector2(1319, 685)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="options" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -312.0
offset_right = 156.0
offset_bottom = -176.0
grow_vertical = 0
scale = Vector2(2, 2)

[node name="atk1" type="Button" parent="CanvasLayer/options"]
layout_mode = 2
text = "Ataque b√°sico"

[node name="atk2" type="Button" parent="CanvasLayer/options"]
layout_mode = 2
text = "Ataque potente"

[node name="ability" type="Button" parent="CanvasLayer/options"]
layout_mode = 2
text = "Habilidad"

[node name="scape" type="Button" parent="CanvasLayer/options"]
layout_mode = 2
text = "Huir"

[connection signal="pressed" from="CanvasLayer/options/atk1" to="." method="_on_atk_1_pressed"]
[connection signal="pressed" from="CanvasLayer/options/atk2" to="." method="_on_atk_2_pressed"]
[connection signal="pressed" from="CanvasLayer/options/ability" to="." method="_on_ability_pressed"]
[connection signal="pressed" from="CanvasLayer/options/scape" to="." method="_on_scape_pressed"]
